# Splendor-bot

./: .gitignore  .gitmodules  Cargo.toml  INSTALLING.md  README.md  config.py  run_game.py
arena/: Cargo.toml
arena/src/: main.rs
examples/python/actions/: bot.py
examples/python/board_and_history/: commands.json
examples/python_actions/: commands.json
examples/python_board_and_history/: commands.json
examples/python_cards/: commands.json
examples/python_cards/python_client/: actions.py  bot.py  cards.py
examples/python_cards/python_client/ffi/: Cargo.toml
examples/rust/actions/: Cargo.toml  commands.json
examples/rust/actions/src/: main.rs
examples/rust/board_and_history/: Cargo.toml
examples/rust/board_and_history/src/: main.rs
examples/rust/cards/src/: main.rs
examples/rust/simple/: Cargo.toml
examples/rust/simple/src/: main.rs
lib/: Cargo.toml
lib/src/: card.rs  client.rs  gem_type.rs  lib.rs  nobles.rs  player.rs  token.rs
lib/src/arena/: arena.rs  clock.rs  mod.rs  protocol.rs  replay.rs
lib/src/game_logic/: board.rs  game.rs  history.rs  mod.rs
python_client/: actions.py  board_and_history.py  bot.py  cards.py  commands.json  lib.py  requirements.txt  test.py
python_client/examples/python_actions/: commands.json
python_client/examples/python_board_and_history/: commands.json
python_client/examples/python_cards/: bot.py  commands.json
python_client/examples/python_timeout/: bot.py
python_client/ffi/: Cargo.toml  build.py  link.sh
python_client/ffi/src/: lib.rs
rust_client/: Cargo.toml
rust_client/src/: main.rs  stubs.rs
rust_client/src/examples/: actions.rs  board_and_history.rs  cards.rs  mod.rs  simple.rs
scaffolding/: config.py  run_game.py
scaffolding/arena/: Cargo.toml  README.md
scaffolding/arena/src/: main.rs
scaffolding/ffi/: Cargo.toml  build.py
scaffolding/ffi/src/: lib.rs
scaffolding/python_ffi/: Cargo.toml
scaffolding/python_ffi/src/: lib.rs
scaffolding/web/: vite.config.ts
scaffolding/web/src/: app.css
scaffolding/web/src/lib/components/: Avatar.svelte  Bank.svelte  Card.svelte  CardDetailGem.svelte  CardDisplay.svelte  CardRow.svelte  CardStack.svelte  Gem.svelte  GemToken.svelte  GemTokenSmall.svelte  Noble.svelte  NobleDetails.svelte  Player.svelte
scaffolding/web/src/lib/stores/: replayStore.js  replayStore.ts
scaffolding/web/src/routes/: +layout.svelte
src/: arena.rs  card.rs  color.rs  game.rs  lib.rs  main.rs  nobles.rs  player.rs  token.rs
src/arena/: mod.rs  protocol.rs
src/game_logic/: board.rs  game.rs  history.rs  mod.rs
(+3 files in other folders)
