[package]
name = "rust_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = "0.99.17"
rand = "0.8.5"
splendor_tourney = { package = "splendor_arena", version = "0.1.3", features= ["rust_stubs"]} 
reqwest = { version = "0.12.1" , features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }

