[package]
name = "ffi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pyo3 = { version = "0.20.3", features = ["extension-module"] }
splendor_tourney = { path = "../../lib" }


[lib]
name = "ffi"
crate-type = ["cdylib"]
