[package]
name = "ffi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
lazy_static = "1.4.0"
pyo3 = { version = "0.20.3", features = ["extension-module"] }
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0.114"
splendor_tourney = { package = "splendor_arena", version = "0.1.1" }
tungstenite = "0.21.0"
url = "2.5.0"
reqwest = { version = "0.12.1", features = ["blocking", "json"] }



[lib]
name = "ffi"
crate-type = ["cdylib"]
